--- a/style.css
+++ b/style.css
@@ -24,6 +24,11 @@ body::-webkit-scrollbar {
   text-align: center;
 }
 
+.navItems:hover {
+  background-color: rgb(0, 0, 0);
+  color : white;
+}
+
 #landingPageContainer{
   display: flex;
   justify-content: center;
@@ -39,6 +44,7 @@ body::-webkit-scrollbar {
 #landingPage-BlueImage {
   width: 100%;
   margin-top: 10em;
+  border-radius: 10px;
 }
 
 #welcomeText {
@@ -65,6 +71,10 @@ body::-webkit-scrollbar {
   padding: 0.25em;
   width: 100%;
   border-radius: 0.25em
+}
+
+#welcomeButton:hover {
+  background-color: rgb(252, 155, 128) !important;
 }
 
 .productName {
@@ -94,7 +104,19 @@ body::-webkit-scrollbar {
   text-align: center;
   float: left;
   padding: 0px !important;
+  
 }
+
+/* #featuresContainer hover */
+#featuresContainer:hover {
+  /* background-color: rgb(48, 48, 48);
+  border-radius: 0.25em;
+  box-shadow: 0px 0px 10px #000; */
+  transform: scale(1.10);
+  transition: all 0.5s ease-in-out;
+
+}
+
 
 #features-subContainer{
   justify-content: center;
@@ -122,6 +144,14 @@ body::-webkit-scrollbar {
   margin-bottom:10%;
 }
 
+/* change bg color of a tag in container */
+.contactImages:hover{
+  border-radius: 0.25em;
+  box-shadow: 0px 0px 10px #000;
+  transform: scale(1.10);
+  transition: all 0.5s ease-in-out;
+}
+
 @media (max-width: 600px){
   /* .featuresImage {
       width: 30%;
@@ -145,4 +175,22 @@ body::-webkit-scrollbar {
   .featuresImage {
       width: 70%;
   }
+}
+
+body{
+  padding:120px 20px;
+}
+
+.results tr[visible='false'],
+.no-result{
+  display:none;
+}
+
+.results tr[visible='true']{
+  display:table-row;
+}
+
+.counter{
+  padding:8px; 
+  color:#ccc;
 }
